--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -50,6 +50,14 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
+                android:text="@string/help_backupIdentities" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
                 android:text="@string/no_friends" />
 
             <TextView
