--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -29,6 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/etInvite"
+        android:fadeScrollbars="false"
         android:visibility="gone" >
 
         <LinearLayout
