--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -46,12 +46,20 @@
                 android:text="@string/welcome_to_surespot" />
 
             <TextView
+                android:id="@+id/backupIdentitiesWarning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp" />
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/help_backupIdentities" />
+                android:text="@string/help_backupIdentities2" />
 
             <TextView
                 android:layout_width="match_parent"
