--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -5,10 +5,16 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dip"
         tools:context=".ChangePasswordActivity" >
+
+        <TextView
+            android:id="@+id/tvChangePasswordWarning"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp" />
 
         <TextView
             android:layout_width="match_parent"
