--- a/res/layout/activity_external_invite.xml
+++ b/res/layout/activity_external_invite.xml
@@ -1,10 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/svInviteExternal"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:descendantFocusability="beforeDescendants"
-    android:focusable="true"
-    android:focusableInTouchMode="true" >
+    android:layout_height="wrap_content" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -57,10 +54,10 @@
 
             <RadioButton
                 android:id="@+id/rbInviteSMS"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:text="share via text message" />
 
             <TextView
@@ -74,10 +71,10 @@
 
             <RadioButton
                 android:id="@+id/rbSocial"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
                 android:text="share via other application" />
 
             <TextView
