--- a/res/layout/activity_billing.xml
+++ b/res/layout/activity_billing.xml
@@ -5,17 +5,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp"
+        android:padding="10dp"        
         tools:context=".BillingActivity" >
 
         <TextView
+            android:id="@+id/tvPwyl"
+            android:gravity="center"
+            android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="pay what you like! we will donate a percentage to the EFF"
-            android:textSize="16sp"
-            android:textStyle="italic" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:layout_width="match_parent"
