--- a/res/layout/activity_signup.xml
+++ b/res/layout/activity_signup.xml
@@ -25,7 +25,7 @@
             android:id="@+id/etSignupUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dip"
+            android:layout_marginTop="5dp"
             android:imeOptions="actionNext"
             android:inputType="textNoSuggestions"
             android:singleLine="true" />
