--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -2,44 +2,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     android:orientation="vertical"
-    android:padding="10dp"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     tools:context=".AboutActivity" >
 
     <TextView
         android:id="@+id/tvAboutAbout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/surespotBlue" >
     </TextView>
 
     <TextView
         android:id="@+id/tvAboutVersion"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/surespotBlue" >
     </TextView>
 
     <TextView
         android:id="@+id/tvAboutWebsite"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/surespotBlue" >
+    </TextView>
+
+    <TextView
+        android:id="@+id/tvAboutOpenSource"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/surespotBlue" >
     </TextView>
 
     <TextView
         android:id="@+id/tvAboutTech"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/surespotBlue" >
     </TextView>
 
     <TextView
         android:id="@+id/tvAboutEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/surespotBlue" >
     </TextView>
 
-    <TextView
-        android:id="@+id/tvAboutLegal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </TextView>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/surespotlauncher512" >
+    </ImageView>
 
 </LinearLayout>
