--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -11,17 +11,17 @@
     tools:context=".AboutActivity" >
 
     <ImageView
-        android:layout_width="match_parent"        
-        android:layout_height="0dp"        
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
+        android:adjustViewBounds="true"
         android:src="@drawable/surespotlauncher512" >
     </ImageView>
 
     <LinearLayout
-        
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         android:orientation="vertical" >
 
         <TextView
