embed zxing qrcode generator in app create surespot.me invite qr code activated by qr button on bottom left of home tab

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -27,18 +27,33 @@
         android:layout_above="@+id/editTexts"
         android:layout_below="@+id/indicator" />
 
-    <ImageView
-        android:id="@+id/bEmoji"
+    <FrameLayout
+        android:id="@+id/fButtons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/fEmoji"
         android:layout_alignBottom="@+id/editTexts"
         android:layout_alignTop="@+id/editTexts"
-        android:layout_alignWithParentIfMissing="true"
-        android:adjustViewBounds="true"
-        android:background="@drawable/abs__list_selector_holo_light"
-        android:padding="5dp"
-        android:visibility="gone" />
+        android:layout_alignWithParentIfMissing="true" >
+
+        <ImageView
+            android:id="@+id/bEmoji"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="@drawable/abs__list_selector_holo_light"
+            android:padding="5dp"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/bQR"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:background="@drawable/abs__list_selector_holo_light"
+            android:padding="5dp"
+            android:src="@drawable/qr_surespot" />
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/editTexts"
@@ -47,7 +62,7 @@
         android:layout_above="@+id/fEmoji"
         android:layout_alignWithParentIfMissing="true"
         android:layout_toLeftOf="@+id/bSend"
-        android:layout_toRightOf="@+id/bEmoji" >
+        android:layout_toRightOf="@+id/fButtons" >
 
         <EditText
             android:id="@+id/etInvite"
