--- a/res/layout/qr_invite_layout.xml
+++ b/res/layout/qr_invite_layout.xml
@@ -25,7 +25,10 @@
         android:id="@+id/tvQrInviteText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:gravity="center" >
     </TextView>
 
