--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -26,7 +26,7 @@
             <item
                 android:id="@+id/menu_invite_external"
                 android:icon="@drawable/blue_heart"
-                android:title="share surespot"/>
+                android:title="invite contacts"/>
 
             <!-- I told you before kid, paywhatyoulike -->
 
