--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -67,6 +67,14 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/no_friends" />
+            
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/invite_contacts" />
 
             <TextView
                 android:layout_width="match_parent"
