inform user that old backup identities will no longer be any good when password is changed or keys regenerated

--- a/res/layout/activity_manage_keys.xml
+++ b/res/layout/activity_manage_keys.xml
@@ -10,7 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="Generate new private key pairs for your identity and revoke the current pair. Any other devices (ie. lost or stolen phones) with the current private key pair will no longer be able to access surespot. You should backup your identity again after performing this operation." />
+        android:text="Generate new private key pairs for your identity and revoke the current pair. Any other devices (ie. lost or stolen phones) with the current private key pair will no longer be able to access surespot." />
+
+    <TextView
+        android:id="@+id/newKeysBackup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
