--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -17,9 +17,14 @@
             android:layout_marginBottom="10dp" />
 
         <TextView
+            android:id="@+id/changePasswordBackup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="0dip"
+            android:layout_marginBottom="10dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" 
             android:text="select identity" />
 
         <Spinner
